# libfprint-elanmoc2-deb

./: .gitignore  README.md  libfprint-build-deps_1.90.2+tod1-0ubuntu1~20.04.10_all.deb  libfprint-build-deps_1.90.7-2_all.deb  libfprint-build-deps_1.94.3+tod1-0ubuntu2~22.04.03_all.deb  libfprint-build-deps_1.94.5+tod1-0ubuntu1_all.deb  libfprint-build-deps_1.94.5-1_all.deb
libfprint-1.90.2+tod1/examples/: enroll.c  manage-prints.c  meson.build  storage.c  storage.h  verify.c
libfprint-1.90.2+tod1/libfprint/tod/: libfprint-tod.ver  meson.build  tod-shared-loader.c
libfprint-1.90.7/: .gitlab-ci.yml  meson.build  meson_options.txt
libfprint-1.90.7/debian/: README.source  changelog  control  gbp.conf  libfprint-2-2.install  libfprint-2-2.postinst  libfprint-2-2.symbols  libfprint-2-dev.install  rules  watch
libfprint-1.90.7/debian/patches/: add_0c00_04c4_devices.patch  build-Skip-the-hwdb-test-if-not-all-drivers-are-really-en.patch  meson-Do-not-support-drivers-known-to-fail-in-Big-Endian-.patch  series  tests-Add-check-that-no-supported-device-is-whitelisted.patch  tests-Add-trailing-newline-to-busname-devname-sysfs-attri.patch  udev-hwdb-Prevent-devices-from-being-listed-twice.patch  udev-rules-Print-warning-if-an-ID-is-supported.patch  udev-rules-Remove-supported-synaptics-devices.patch
libfprint-1.90.7/debian/patches/debian/: Tweak-the-udev-rules-creator-for-Debian-usage.patch  data-Use-auto-generated-but-hardcoded-autosuspend-rules-f.patch
libfprint-1.90.7/demo/: org.freedesktop.libfprint.Demo.json
libfprint-1.90.7/libfprint/: fp-device.c  fpi-assembling.h  fpi-device.c  fpi-ssm.c  fpi-usb-transfer.c  fprint-list-udev-rules.c  meson.build
libfprint-1.90.7/libfprint/drivers/: uru4000.c  vfs301_proto_fragments.h  virtual-image.c
libfprint-1.90.7/libfprint/drivers/elanmoc2/: elanmoc2.c  elanmoc2.h
libfprint-1.90.7/libfprint/drivers/goodixmoc/: goodix.c  goodix.h  goodix_proto.c  goodix_proto.h
libfprint-1.90.7/tests/: meson.build  test-fp-context.c  test-fp-device.c  test-fpi-device.c  virtual-image.py
libfprint-1.90.7/tests/aes3500/: device
libfprint-1.90.7/tests/goodixmoc/: custom.ioctl  device
libfprint-1.90.7/tests/vfs0050/: device
libfprint-1.90.7/tests/vfs301/: device
libfprint-1.94.3+tod1/libfprint/: fp-context.c  fp-device-private.h  fp-device.c  fp-image.c  fp-print.c  fpi-assembling.h  fpi-device.c  fpi-device.h  fpi-image-device.h  fpi-image.h  fpi-usb-transfer.c  fpi-usb-transfer.h  fprint-list-udev-hwdb.c  fprint-list-udev-rules.c  meson.build
libfprint-1.94.3+tod1/libfprint/drivers/: aesx660.c  egis0570.c  elan.c  elan.h  elanspi.h  upek_proto.h  upeksonly.c  upektc.c  upekts.c  uru4000.c  vfs0050.c  vfs301.c  vfs301_proto.c  vfs7552.c  virtual-device-private.h  virtual-device.c
libfprint-1.94.3+tod1/libfprint/tod/: libfprint-tod.ver.in  meson.build  tod-fpi-ssm.c  tod-macros.h  tod-shared-loader.c  tod-shared-loader.h  tod-symbols.h  tod-wrappers.c  tod-wrappers.h
libfprint-1.94.5+tod1/: .gitlab-ci.yml  NEWS  README.md  README.tod.md  meson.build  meson_options.txt
libfprint-1.94.5+tod1/.gitlab-ci/: libfprint-image-variables.yaml  libfprint-templates.yaml  scan-build
libfprint-1.94.5+tod1/debian/: README.source  README.tod.md  changelog  control  gbp.conf  gir1.2-fprint-2.0.install  libfprint-2-2.install  libfprint-2-2.postinst.in  libfprint-2-2.symbols  libfprint-2-doc.install  libfprint-2-tod1.install  libfprint-2-tod1.symbols  rules  update-udev-triggers.sh
libfprint-1.94.5+tod1/debian/patches/: elanmoc2-add-PID-04f3:0c00.patch  elanmoc2-add-elanmoc2-driver.patch  elanmoc2-fix-building.patch  series
libfprint-1.94.5+tod1/demo/: gtk-libfprint-test.c
libfprint-1.94.5+tod1/doc/: libfprint-2-sections.txt
libfprint-1.94.5+tod1/examples/: meson.build  tod-inspector.c  utilities.c
libfprint-1.94.5+tod1/libfprint/: fp-context.c  fp-device-private.h  fp-device.c  fp-device.h  fp-image-device.c  fp-image.c  fp-print.c  fpi-assembling.c  fpi-byte-reader.c  fpi-compat.h  fpi-device.c  fpi-image-device.c  fpi-print.h  fpi-spi-transfer.h  fpi-ssm.c  fpi-ssm.h  fprint-list-supported-devices.c  meson.build
libfprint-1.94.5+tod1/libfprint/drivers/: elan.c  elanspi.c  elanspi.h  vfs301_proto.c  virtual-image.c
libfprint-1.94.5+tod1/libfprint/nbis/: fix-musl-build.patch
libfprint-1.94.5+tod1/libfprint/tod/: libfprint-tod.ver.in  meson.build  tod-goodix-wrapper.c  tod-goodix-wrapper.h  tod-shared-loader.c  tod-shared-loader.h  tod-symbols.h
libfprint-1.94.5+tod1/tests/: create-driver-test.py.in  libfprint.supp  meson.build  test-device-fake-tod.h  test-device-fake.c  test-device-fake.h  test-fp-context-tod.c  test-fp-todv1-types.c  test-fpi-assembling.c  test-fpi-device.c  test-fpi-ssm.c  test-utils-tod.h  virtual-device.py
libfprint-1.94.5+tod1/tests/aes2501/: capture.pcapng
libfprint-1.94.5+tod1/tests/egis0570/: capture.pcapng
libfprint-1.94.5+tod1/tests/elanspi/: device-hidraw  device-spi
libfprint-1.94.5+tod1/tests/fpcmoc/: custom.pcapng  device
libfprint-1.94.5+tod1/tests/goodixmoc/: custom.pcapng  custom.py  device
libfprint-1.94.5+tod1/tests/nb1010/: device
libfprint-1.94.5+tod1/tests/synaptics/: custom.py
libfprint-1.94.5+tod1/tests/tod-drivers/: base-fpi-device.h  base-fpi-image-device.h  base-fpi-usb.h
libfprint-1.94.5+tod1/tests/upektc_img/: capture.pcapng
libfprint-1.94.5+tod1/tests/uru4000-4500/: device
libfprint-1.94.5+tod1/tests/vfs5011/: device
libfprint-1.94.5+tod1/tests/vfs7552/: device
libfprint-1.94.5/tests/: capture.py  meson.build  test-device-fake.c  test-fp-device.c  test-fpi-device.c  test-generated-hwdb.sh  umockdev-test.py  virtual-image.py
libfprint-1.94.5/tests/elan-cobo/: device
libfprint-1.94.5/tests/elanmoc/: custom.pcapng  custom.py  device
libfprint-1.94.5/tests/fpcmoc/: custom.py
libfprint-1.94.5/tests/synaptics/: custom.pcapng  device
libfprint-1.94.5/tests/uru4000-4500/: capture.pcapng
libfprint-1.94.5/tests/uru4000-msv2/: capture.pcapng  device
libfprint-1.94.5/tests/vfs0050/: device
libfprint-1.94.5/tests/vfs7552/: capture.ioctl
(+303 files in other folders)
