option('drivers',
       description: 'Drivers to integrate, "default" selects the default set, "all" selects all drivers',
       type: 'string',
       value: 'default')
option('introspection',
       description: 'Build GObject Introspection repository',
       type: 'boolean',
       value: true)
option('udev_rules',
       description: 'Whether to create and install udev rules (auto: turn on when needed by a driver)',
       type: 'feature',
       value: 'auto')
option('udev_rules_dir',
       description: 'Installation path for udev rules',
       type: 'string',
       value: 'auto')
option('udev_hwdb',
       description: 'Whether to create a udev hwdb for autosuspend (included in systemd v248 and later)',
       type: 'feature',
       value: 'auto')
option('udev_hwdb_dir',
       description: 'Installation path for udev hwdb',
       type: 'string',
       value: 'auto')
option('gtk-examples',
       description: 'Whether to build GTK+ example applications',
       type: 'boolean',
       value: false)
option('doc',
       description: 'Whether to build the API documentation',
       type: 'boolean',
       value: true)

option('tod',
       description: 'Whether to build the TOD library',
       type: 'boolean',
       value: true)
